[tool.poetry]
name = "unit-3-agentic-rag"
version = "0.1.0"
description = "Agentic RAG Use Case Exercise"
authors = ["ssgrummons <samuel.grummons@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
datasets = "^3.5.0"
smolagents = "^1.13.0"
langchain-community = "^0.3.21"
rank-bm25 = "^0.2.2"
gradio = "^5.23.3"
litellm = "^1.65.4.post1"
langchain = "^0.3.23"
langchain-litellm = "^0.1.4"
langgraph = "^0.3.26"
langchain-huggingface = "^0.1.2"
langchain-ollama = "^0.3.1"


[tool.poetry.group.dev.dependencies]
dotenv = "^0.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
